# allways

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  PR_FIX.md  PR_REFACTOR.md  README.md  SECURITY.md  docker-compose.miner.yml  docker-compose.vali.yml  min_compute.yml  pyproject.toml
.github/workflows/: docker-publish.yml  lint.yml  test.yml
allways/: __init__.py  chains.py  classes.py  commitments.py  constants.py  contract_client.py  dev_signal.py  synapses.py
allways/chain_providers/: __init__.py  base.py  bitcoin.py  solana.py  subtensor.py
allways/cli/: dendrite_lite.py  help.py  main.py  preflight.py  validator_rejections.py
allways/cli/swap_commands/: __init__.py  admin.py  bind.py  claim.py  collateral.py  helpers.py  history.py  history_store.py  miner_commands.py  numeraire.py  pair.py  post_tx.py  quote.py  resume.py  status.py  swap.py  swap_intake.py  view.py
allways/metadata/: __init__.py  allways_swap_manager.json
allways/miner/: fulfillment.py  swap_poller.py
allways/solana/: __init__.py  client.py  events.py  keys.py  layouts.py  pdas.py  program.py  rpc.py
allways/swap_api/: __init__.py  __main__.py  app.py  deps.py  models.py
allways/swap_api/routes/: chains.py  health.py  miners.py  proofs.py  swap.py
allways/utils/: config.py  logging.py  misc.py  proofs.py  rate.py  rate_selection.py  scale.py
allways/validator/: axon_handlers.py  binding.py  bounds_cache.py  chain_verification.py  contract_events.py  event_index.py  event_watcher.py  forward.py  market_rate.py  optimistic_extensions.py  pending_confirms.py  rate_limiter.py  rate_state.py  recycle.py  reservation_index.py  reserve_engine.py  scoring.py  scoring_store.py  scoring_trace.py  seam_http.py  solana_swap_loop.py  state_store.py  state_store_queries.py  swap_tracker.py  voting.py  weights_vote.py
allways/validator/storage/: __init__.py  database.py  queries.py  repository.py  storage.py
allways/validator/utils/: fees.py
neurons/: miner.py  validator.py
neurons/base/: miner.py  neuron.py  validator.py
scripts/: miner-entrypoint.sh  recover_balance_from_hotkey.py  test_embit_send.py  vali-entrypoint.sh
smart-contracts/ink/: Cargo.toml  errors.rs  events.rs  lib.rs  types.rs
smart-contracts/solana/: Anchor.toml
smart-contracts/solana/programs/allways_swap_manager/: Cargo.toml
smart-contracts/solana/programs/allways_swap_manager/src/: consensus.rs  constants.rs  error.rs  events.rs  instructions.rs  lib.rs  lottery.rs  penalty.rs  state.rs  tunables.rs  validate.rs
smart-contracts/solana/programs/allways_swap_manager/src/instructions/: admin.rs  bind_hotkey.rs  cancel_pool.rs  cancel_reservation.rs  close_stale_claim.rs  close_unfilled_reservation.rs  confirm_swap.rs  deactivate.rs  extend_reservation.rs  extend_timeout.rs  finalize_reservation.rs  initialize.rs  mark_fulfilled.rs  open_or_request.rs  post_collateral.rs  remove_quote.rs  resolve_pool.rs  set_quote.rs  submit_swap_claim.rs  timeout_swap.rs  vote_activate.rs  vote_deactivate.rs  vote_initiate.rs  vote_reserve.rs  vote_set_weights.rs  withdraw_collateral.rs  withdraw_treasury.rs
smart-contracts/solana/programs/allways_swap_manager/tests/: integration_onchain.rs  test_binding.rs  test_collateral.rs  test_consensus.rs  test_extensions.rs  test_initialize.rs  test_quote.rs  test_reservation.rs  test_swap.rs  test_treasury.rs  test_validator_weight.rs
tests/: conftest.py  helpers.py  test_axon_handlers.py  test_axon_solana_handlers.py  test_base_validator.py  test_binding.py  test_bitcoin_fee_sizing.py  test_bitcoin_signing.py  test_block_time.py  test_btc_tip_hoist.py  test_chain_providers_base.py  test_chain_providers_init.py  test_chain_providers_optional.py  test_chain_verification.py  test_chains.py  test_claim_command.py  test_cli_admin_solana.py  test_cli_config_show.py  test_cli_helpers.py  test_cli_miner_solana.py  test_cli_pending_swap_reconciliation.py  test_cli_program_id.py  test_cli_status.py  test_cli_view_solana.py  test_commitments.py  test_config.py  test_config_atomic_write.py  test_contract_client.py  test_dendrite_lite.py  test_dev_signal.py  test_eligibility.py  test_event_index.py  test_event_watcher.py  test_finalize_sweep.py  test_forward.py  test_forward_confirm.py  test_forward_pending_replay.py  test_forward_verify_recoverable.py  test_fulfillment.py  test_global_flags.py  (+66 more)
tests/chain_providers/: test_bitcoin_signing.py
tests/core/: test_commitments.py
tests/miner/: test_fulfillment.py
tests/swap_api/: conftest.py  test_health.py  test_miners.py  test_swap.py
tests/validator/: test_axon_handlers.py  test_event_watcher.py  test_pending_confirm_queue.py  test_scoring_iter.py  test_scoring_v1.py  test_swap_tracker.py
